--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,66 @@
+@import url('https://fonts.googleapis.com/css?family=Orbitron');
+
+* {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  outline: 0;
+  vertical-align: baseline;
+  background: transparent;
+}
+
 .App {
+  position: relative;
   text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  min-width: 100vw;
+  background: #4d0026;
+  color: #ffffff;
 }
 
-.App-link {
-  color: #61dafb;
+.vp-center {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.little-text {
+  font-size: 12px;
+}
+
+.timemaker, .timer {
+  display: inline-block;
+  width: 50vw;
+  margin-top: 2rem;
+}
+
+.time-adjuster {
+  margin: 0 1rem;
+  font-family: 'Orbitron', sans-serif;
+}
+
+.incrementer, .decrementer {
+  cursor: pointer;
+  user-select: none;
+}
+
+.start-clock {
+  background: #800040;
+  color: #ffffff;
+  border: 2px black solid;
+  padding: 1rem;
+  cursor: pointer;
+}
+
+.timer {
+  font-family: 'Orbitron', sans-serif;
+}
+
+.start-clock {
+  display: block;
+  min-width: 100vw;
+  margin-top: 2rem;
 }
