--- a/src/App.css
+++ b/src/App.css
@@ -43,7 +43,7 @@
   font-family: 'Orbitron', sans-serif;
 }
 
-.incrementer, .decrementer {
+.incrementer-Work, .incrementer-Rest, .decrementer-Work, .decrementer-Rest {
   cursor: pointer;
 }
 
