--- a/src/App.css
+++ b/src/App.css
@@ -51,7 +51,7 @@
   font-family: 'Orbitron', sans-serif;
 }
 
-.start-clock {
+.start-clock, .btn-clock, .always-clock {
   display: block;
   min-width: 50vw;
   padding: 1rem;
@@ -59,4 +59,8 @@
   color: #ffffff;
   border: 2px black solid;
   cursor: pointer;
+}
+
+.btn-clock {
+  visibility: hidden;
 }
