--- a/src/App.css
+++ b/src/App.css
@@ -42,7 +42,7 @@
 }
 
 .time-adjuster {
-  margin: 0 2rem;
+  margin: 0 1rem;
 }
 
 .incrementer-Work, .incrementer-Rest, .decrementer-Work, .decrementer-Rest {
@@ -73,8 +73,8 @@
 }
 
 .status {
-  margin-top: 1rem;
-  font-size: 1.5rem;
+  margin-top: .5rem;
+  font-size: 2rem;
   font-family: 'Acme', serif;
 }
 
@@ -86,7 +86,7 @@
   margin-top: 1rem;
 }
 
-#display {
+#display-total {
   margin-top: 1rem;
 }
 
@@ -99,7 +99,99 @@
 }
 
 .progress-bar {
-  width: 1%;
+  width: 0;
   min-height: 5vh;
-  background-color: #4CAF50;
+  background-color: #ffb3d7;
+}
+
+.tomato {
+  margin: 0;
+  position: absolute;
+  top: 34%;
+  left: 50%;
+  transform: translate(-50%, -34%);
+  max-width: 8vw;
+}
+
+.jello-horizontal {
+	-webkit-animation: jello-horizontal 0.9s 4 both;
+          animation: jello-horizontal 0.9s 4 both;
+
+}
+
+@-webkit-keyframes jello-horizontal {
+  0% {
+    -webkit-transform: scale3d(1, 1, 1);
+            transform: scale3d(1, 1, 1);
+  }
+  30% {
+    -webkit-transform: scale3d(1.25, 0.75, 1);
+            transform: scale3d(1.25, 0.75, 1);
+  }
+  40% {
+    -webkit-transform: scale3d(0.75, 1.25, 1);
+            transform: scale3d(0.75, 1.25, 1);
+  }
+  50% {
+    -webkit-transform: scale3d(1.15, 0.85, 1);
+            transform: scale3d(1.15, 0.85, 1);
+  }
+  65% {
+    -webkit-transform: scale3d(0.95, 1.05, 1);
+            transform: scale3d(0.95, 1.05, 1);
+  }
+  75% {
+    -webkit-transform: scale3d(1.05, 0.95, 1);
+            transform: scale3d(1.05, 0.95, 1);
+
+  }
+  100% {
+    -webkit-transform: scale3d(1, 1, 1);
+            transform: scale3d(1, 1, 1);
+  }
+}
+@keyframes jello-horizontal {
+  0% {
+    -webkit-transform: scale3d(1, 1, 1);
+            transform: scale3d(1, 1, 1) translate(-50%, -34%);
+            transform-origin: left;
+  
+  }
+  30% {
+    -webkit-transform: scale3d(1.25, 0.75, 1);
+            transform: scale3d(1.25, 0.75, 1) translate(-50%, -34%);
+            transform-origin: left;
+
+  }
+  40% {
+    -webkit-transform: scale3d(0.75, 1.25, 1);
+            transform: scale3d(0.75, 1.25, 1) translate(-50%, -34%);
+            transform-origin: left;
+
+  }
+  50% {
+    -webkit-transform: scale3d(1.15, 0.85, 1);
+            transform: scale3d(1.15, 0.85, 1) translate(-50%, -34%);
+            transform-origin: left;
+
+  }
+  65% {
+    -webkit-transform: scale3d(0.95, 1.05, 1);
+            transform: scale3d(0.95, 1.05, 1) translate(-50%, -34%);
+            transform-origin: left;
+  
+  }
+  75% {
+    -webkit-transform: scale3d(1.05, 0.95, 1);
+            transform: scale3d(1.05, 0.95, 1) translate(-50%, -34%);
+            transform-origin: left;
+ 
+
+  }
+  100% {
+    -webkit-transform: scale3d(1, 1, 1);
+            transform: scale3d(1, 1, 1) translate(-50%, -34%);
+            transform-origin: left;
+
+  }
 }
